# tinytorch

./: .gitignore  __init__.py  pyproject.toml
activations/: __init__.py  activations.py
benchmark/: optimizer_benchmark.py
benchmark/data/: data_benchmark.py
layers/: __init__.py  layers.py
tensor/: __init__.py  tensor.py  tensor_test.py
test/: test_tensor.py
test/attention/: test_attention.py
test/autograd/: __init__.py  test_function.py
test/data/: test_data.py  test_dataloader.py  test_dataset.py
test/nn/: test_activation.py  test_batchnorm.py  test_clip_grad.py  test_conv.py  test_embedding.py  test_loss.py  test_module.py  test_pooling.py  test_transformer.py
test/optim/: test_adam_optimizer.py  test_adamw_optimizer.py  test_base_optimizer.py  test_lr_scheduler.py  test_optim.py  test_rmsprop_optimizer.py  test_sgd_optimizer.py
test/tokenizer/: test_base_tokenizer.py  test_bpe_tokenizer.py  test_char_tokenizer.py
test/training/: test_trainer.py
tests/: __init__.py  test_activations.py  test_layers.py  test_tensor.py
tinytorch/: __init__.py  tensor.py
tinytorch/attention/: __init__.py  attention.py
tinytorch/autograd/: __init__.py  context.py  function.py  utils.py
tinytorch/data/: __init__.py  dataloader.py  dataset.py
tinytorch/nn/: __init__.py  activation.py  batchnorm.py  conv.py  dropout.py  embedding.py  linear.py  loss.py  module.py  pooling.py  sequential.py  transformer.py  utils.py
tinytorch/optim/: __init__.py  adam.py  adamw.py  lr_scheduler.py  optimizer.py  rmsprop.py  sgd.py
tinytorch/tokenizer/: __init__.py  (+4 more)
(+5 files in other folders)
